--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="zh-CN">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello World</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+
+<body>
+    <header>
+        <h1>Hello World</h1>
+    </header>
+    <footer>
+        <p>mail: yanweitao@hotmail.com</p>
+    </footer>
+</body>
+
+</html>
